@@ -1,7 +1,5 @@
 package edu.ntnu.app;
 
-import edu.ntnu.app.psta.Psta;
-
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
@@ -9,33 +7,34 @@ import java.util.*;
 import java.util.stream.IntStream;
 
 public class Docs {
-    public static Document[] docs;
-    protected static List<Location> locations;
-    protected static SortedSet<Long> timestamps; // TreeSet is sorted so we keep the order fixed
-    protected static SortedSet<String> vocabulary; // TreeSet is sorted so we keep the order fixed
+    public static final double HOUR_MS = 3.6E+6f;
+    public static final double DAY_MS = 8.64E+7f;
+    public static final double TIME_CONVERT = HOUR_MS;
+
+    public static List<Document> docs;
+    private static List<Location> locations;
+    private static List<Long> timestamps;
+    private static List<String> vocabulary;
 
     protected static void initialize(String pathName) throws IOException {
         // Init locations and vocabulary so we can build them as we read the input
-        locations = new ArrayList<>();
-        vocabulary = new TreeSet<>();
-        timestamps = new TreeSet<>();
-        docs = readFile(pathName);
+        List<Location> locs = new ArrayList<>();
+        Set<String> voc = new TreeSet<>();
+        Set<Long> tss = new TreeSet<>();
+        docs = readFile(pathName, locs, voc, tss);
         // Make locations, timestamps and vocabulary unmodifiable
-        locations = Collections.unmodifiableList(locations);
-        vocabulary = Collections.unmodifiableSortedSet((TreeSet) vocabulary);
-        timestamps = Collections.unmodifiableSortedSet((TreeSet) timestamps);
+        locations = Collections.unmodifiableList(locs);
+        vocabulary = List.copyOf(voc);
+        timestamps = List.copyOf(tss);
+        System.out.format("#Locations: %d\n#Timestamps: %d\n#Words: %d\n", locations.size(), timestamps.size(), vocabulary.size());
     }
 
     // Format: long \n lat \n name \n city \n country code \n timestamp_ms \n text \n long \n etc...
     // i.e. every 6 lines belong to one document. The method assumes there are exactly N*6 lines.
     // We also assume that the documents are sorted by timestamp.
-    private static Document[] readFile(String pathName) throws IOException, NullPointerException {
+    private static List<Document> readFile(String pathName, List<Location> locs, Set<String> voc, Set<Long> tss) throws IOException, NullPointerException {
         List<Document> data = new ArrayList<>();
-        FileInputStream inputStream = null;
-        Scanner sc = null;
-        try {
-            inputStream = new FileInputStream(pathName);
-            sc = new Scanner(inputStream, StandardCharsets.UTF_8);
+        try (FileInputStream inputStream = new FileInputStream(pathName); Scanner sc = new Scanner(inputStream, StandardCharsets.UTF_8)) {
             System.out.println("Scanning docs...");
             while (sc.hasNextLine()) {
                 long lineTimestamp = Long.parseLong(sc.nextLine());
@@ -45,44 +44,37 @@ public class Docs {
                 String lineName = sc.nextLine();
                 String lineCity = sc.nextLine();
                 String lineCountry = sc.nextLine();
-                data.add(createDocument(lineLong, lineLat, lineName, lineCity, lineCountry, lineTimestamp, lineText));
+                data.add(createDocument(locs, voc, tss, lineLong, lineLat, lineName, lineCity, lineCountry, lineTimestamp, lineText));
             }
-            System.out.format("Successfully scanned all %d docs...\n", data.size());
+            System.out.format("Successfully scanned %d docs\n", data.size());
             // note that Scanner suppresses exceptions
             if (sc.ioException() != null) {
                 throw sc.ioException();
             }
-        } finally {
-            if (inputStream != null) {
-                inputStream.close();
-            }
-            if (sc != null) {
-                sc.close();
-            }
         }
-        return data.toArray(Document[]::new);
+        return data;
     }
 
     // Method to create a document from the input information. Creates a new location and time object if it does not exist, and adds its terms to the vocabulary.
-    private static Document createDocument(Float lineLong, Float lineLat, String lineName, String lineCity, String lineCountry, long lineTimestamp, String lineText) {
+    private static Document createDocument(List<Location> locs, Set<String> voc, Set<Long> tss, Float lineLong, Float lineLat, String lineName, String lineCity, String lineCountry, long lineTimestamp, String lineText) {
         // Append new location to locations list if it does not exist. If it does exist, simply store the index.
         Location l = new Location(lineLat, lineLong, lineName, lineCity, lineCountry);
-        if (!locations.contains(l))
-            locations.add(l); // Add at back of list, important to not change the indices.
-        int locationIndex = locations.indexOf(l);
+        if (!locs.contains(l))
+            locs.add(l); // Add at back of list, important to not change the indices.
+        int locationIndex = locs.indexOf(l);
 
         // Add all the terms of the document to the vocabulary.
-        vocabulary.addAll(Arrays.asList(lineText.split(" ")));
+        voc.addAll(Arrays.asList(lineText.split(" ")));
 
         // Convert timestamp to days (or hours) since UNIX Epoch, store all timestamps found
-        long ts = (long) (lineTimestamp / Psta.TIME_CONVERT);
-        timestamps.add(ts);
+        long ts = (long) (lineTimestamp / TIME_CONVERT);
+        tss.add(ts);
 
         return new Document(locationIndex, ts, lineText);
     }
 
-    public static Document get(int d) {
-        return docs[d];
+    public static Document getDoc(int d) {
+        return docs.get(d);
     }
 
     public static int nTimeslots() {
@@ -90,7 +82,7 @@ public class Docs {
     }
 
     public static int nDocuments() {
-        return docs.length;
+        return docs.size();
     }
 
     public static int nLocations() {
@@ -103,14 +95,22 @@ public class Docs {
 
     public static int getTimestampIndex(long timestamp) {
         Long[] ts = timestamps.toArray(Long[]::new);
-        return IntStream.range(0, timestamps.size()).filter(i -> ts[i] == timestamp).findFirst().getAsInt();
+        return IntStream.range(0, timestamps.size()).filter(i -> ts[i] == timestamp).findFirst().orElseThrow();
     }
 
-    public static String[] getVocabulary() {
-        return vocabulary.toArray(String[]::new);
+    public static double getTimestamp(int t) {
+        return timestamps.get(t);
     }
 
-    public static Location[] getLocations() {
-        return locations.toArray(Location[]::new);
+    public static List<String> getVocabulary() {
+        return vocabulary;
+    }
+
+    public static String getWord(int w) {
+        return vocabulary.get(w);
+    }
+
+    public static Location getLocation(int l) {
+        return locations.get(l);
     }
 }
